k3s/services/actual/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: actual
  name: actual
spec:
  selector:
    app: actual
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5006
