k3s/services/actual/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-ingress
  namespace: actual
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - actual.homelab.kevin.lutzer.ca
    secretName: actual-kevinlutzer-ca-tls
  rules:
  - host: actual.homelab.kevin.lutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: actual
              port:
                number: 80
